# vexobj

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  openapi.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: docker-smoke.sh
.github/workflows/: ci.yml  pages.yml  release.yml
bench/: bench.sh
config/: default.toml
crates/vaultfs-auth/: Cargo.toml
crates/vaultfs-auth/src/: keys.rs  lib.rs  presigned.rs
crates/vaultfs-cache/: Cargo.toml
crates/vaultfs-cache/src/: lib.rs
crates/vaultfs-cli/: Cargo.toml
crates/vaultfs-cli/src/: main.rs
crates/vaultfs-processing/: Cargo.toml
crates/vaultfs-processing/src/: error.rs  ffmpeg.rs  lib.rs  transcode.rs  transform.rs
crates/vaultfs-s3-compat/: Cargo.toml
crates/vaultfs-s3-compat/benches/: sigv4.rs
crates/vaultfs-s3-compat/src/: error.rs  lib.rs  routes.rs  signature.rs  xml.rs
crates/vaultfs-server/: Cargo.toml
crates/vaultfs-server/src/: audit.rs  config.rs  main.rs  metrics.rs  middleware.rs  ratelimit.rs  security.rs  state.rs  transcode_worker.rs  webhooks.rs
crates/vaultfs-server/src/routes/: admin.rs  buckets.rs  health.rs  mod.rs  multipart.rs  objects.rs  replication.rs  stats.rs  stream.rs  transcode.rs
crates/vaultfs-storage/: Cargo.toml
crates/vaultfs-storage/benches/: hot_paths.rs
crates/vaultfs-storage/src/: blob_store.rs  db.rs  engine.rs  error.rs  gc.rs  lib.rs  models.rs
crates/vaultfs-tests/: Cargo.toml
crates/vaultfs-tests/src/: lib.rs
crates/vaultfs-tests/tests/: e2e_test.rs  integration_test.rs
crates/vexobj-auth/: Cargo.toml
crates/vexobj-auth/src/: error.rs  keys.rs  lib.rs  presigned.rs
crates/vexobj-cache/: Cargo.toml
crates/vexobj-cache/src/: lib.rs
crates/vexobj-cli/: Cargo.toml
crates/vexobj-cli/src/: main.rs
crates/vexobj-processing/: Cargo.toml
crates/vexobj-processing/src/: ffmpeg.rs  lib.rs  transcode.rs  transform.rs  video.rs
crates/vexobj-s3-compat/: Cargo.toml
crates/vexobj-s3-compat/benches/: sigv4.rs
crates/vexobj-s3-compat/src/: error.rs  lib.rs  presigned_post.rs  routes.rs  signature.rs  xml.rs
crates/vexobj-server/: Cargo.toml
crates/vexobj-server/src/: audit.rs  config.rs  cors.rs  main.rs  metrics.rs  middleware.rs  ratelimit.rs  request_id.rs  security.rs  state.rs  transcode_worker.rs  webhooks.rs
crates/vexobj-server/src/routes/: admin.rs  buckets.rs  dashboard.rs  health.rs  mod.rs  multipart.rs  objects.rs  replication.rs  stats.rs  stream.rs  transcode.rs
crates/vexobj-storage/: Cargo.toml
crates/vexobj-storage/benches/: hot_paths.rs
crates/vexobj-storage/src/: backup.rs  blob_store.rs  db.rs  encryption.rs  engine.rs  error.rs  gc.rs  lib.rs  local_blob_store.rs  models.rs  s3_blob_store.rs
crates/vexobj-tests/: Cargo.toml
crates/vexobj-tests/tests/: e2e_test.rs  integration_test.rs
deploy/grafana/: vaultfs-dashboard.json  vexobj-dashboard.json
deploy/helm/vaultfs/: Chart.yaml  values.yaml
deploy/helm/vaultfs/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
deploy/helm/vexobj/: Chart.yaml  values.yaml
deploy/helm/vexobj/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
deploy/prometheus/: alerts.yml
docs/: backends.md  benchmarks.md  failover.md  monitoring.md  replication.md  s3-compat.md  video.md
docs/guides/: mastodon.md  peertube.md
sdks/go/: go.mod  vaultfs.go  vaultfs_test.go  vexobj.go  vexobj_test.go
sdks/js/: package-lock.json  package.json  tsconfig.json
sdks/js/src/: index.ts
sdks/python/: pyproject.toml
sdks/python/vaultfs/: __init__.py  client.py
sdks/python/vexobj/: __init__.py  client.py
site/: index.html
site/demo/: index.html
