[package]
name = "vaultfs-processing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Image processing engine for VaultFS"

[dependencies]
image = { workspace = true }
mp4 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
