[package]
name = "vaultfs-s3-compat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "S3-compatible API layer for VaultFS"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
mime_guess = { workspace = true }
vaultfs-storage = { workspace = true }
vaultfs-auth = { workspace = true }
