[package]
name = "vaultfs-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage engine for VaultFS"

[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
mime_guess = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
