[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultfs-sdk"
version = "0.1.0"
description = "Python SDK for VaultFS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[project.urls]
Repository = "https://github.com/aniasse/vaultfs"
