[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vexobj-sdk"
version = "0.1.0"
description = "Python SDK for vexobj"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[project.urls]
Repository = "https://github.com/vortex-soft/vexobj"
